--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -2,12 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Spring Framework Guru</title>
+    <title>紫金矿业数据中心</title>
 
+    <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
 <body>
+
 <div class="container">
-    <div th:if="${not #lists.isEmpty(contracts)}">
+    <div th:if="${not #lists.isEmpty(categories)}">
         <h2>Product List</h2>
         <table class="table table-striped">
             <tr>
@@ -18,20 +20,19 @@
                 <!--<th>View</th>-->
                 <!--<th>Edit</th>-->
             </tr>
-            <tr th:each="contract : ${contracts}">
+            <tr th:each="category : ${categories}">
                 <!--<td th:text="${product.id}"><a href="/product/${product.id}">Id</a></td>-->
                 <!--<td th:text="${product.productId}">Product Id</td>-->
                 <!--<td th:text="${product.description}">descirption</td>-->
                 <!--<td th:text="${product.price}">price</td>-->
                 <!--<td><a th:href="${ '/product/' + product.id}">View</a></td>-->
-                <td><a th:href="${'/contract/download/'} + ${category} + ${'/'} + ${contract}">
-                    <p class="form-control-static" th:text="${contract}">x</p>
+                <td><a th:href="${'/contract/'} + ${category.key}">
+                    <p class="form-control-static" th:value="${category.key}" th:text="${category.value}">x</p>
                 </a></td>
             </tr>
         </table>
 
     </div>
 </div>
-
 </body>
 </html>
