--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>紫金矿业数据中心</title>
+    <title>速达律法律咨询</title>
 
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
