--- a/src/main/resources/templates/contracts.html
+++ b/src/main/resources/templates/contracts.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Spring Framework Guru</title>
+    <title>速达律法律咨询</title>
 
 </head>
 <body>
