--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,9 +34,7 @@
         <div class="jumbotron">
             <div class="row text-center">
                 <div class="">
-                    <h2>Spring Framework Guru</h2>
-
-                    <h3>Spring Boot Web App</h3>
+                    <h2>速达律法律咨询</h2>
                 </div>
             </div>
             <!--<div class="row text-center">-->
