--- a/src/main/resources/templates/contracts.html
+++ b/src/main/resources/templates/contracts.html
@@ -8,12 +8,12 @@
 <body>
 <div class="container">
     <div th:if="${not #lists.isEmpty(contracts)}">
-        <h2>Product List</h2>
+        <h2>合同列表</h2>
         <table class="table table-striped">
             <tr>
                 <!--<th>Id</th>-->
                 <!--<th>Product Id</th>-->
-                <th>Description</th>
+                <!--<th>Description</th>-->
                 <!--<th>Price</th>-->
                 <!--<th>View</th>-->
                 <!--<th>Edit</th>-->
