--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -10,12 +10,12 @@
 
 <div class="container">
     <div th:if="${not #lists.isEmpty(categories)}">
-        <h2>Product List</h2>
+        <h2>合同分类</h2>
         <table class="table table-striped">
             <tr>
                 <!--<th>Id</th>-->
                 <!--<th>Product Id</th>-->
-                <th>Description</th>
+                <!--<th>Description</th>-->
                 <!--<th>Price</th>-->
                 <!--<th>View</th>-->
                 <!--<th>Edit</th>-->
