--- a/src/main/resources/templates/jsapi.html
+++ b/src/main/resources/templates/jsapi.html
@@ -3,6 +3,8 @@
 <head lang="en">
 
     <title>速达律法律咨询</title>
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+            th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
@@ -12,7 +14,11 @@
 <div class="container">
     123
 </div>
-<script type="text/javascript">
+<script th:inline="javascript">
+
+  var openid = [[${another}]]
+  alert("openid: " + openid);
+
     wx.config({
         debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
         appId: '', // 必填，公众号的唯一标识
@@ -22,30 +28,75 @@
         jsApiList: [] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
     });
 
-    function onBridgeReady(){
-       WeixinJSBridge.invoke(
-           'getBrandWCPayRequest', {
-               "appId":"wx2421b1c4370ec43b",     //公众号名称，由商户传入
-               "timeStamp":"1395712654",         //时间戳，自1970年以来的秒数
-               "nonceStr":"e61463f8efa94090b1f366cccfbbb444", //随机串
-               "package":"prepay_id=u802345jgfjsdfgsdg888",
-               "signType":"MD5",         //微信签名方式：
-               "paySign":"70EA570631E4BB79628FBCA90534C63FF7FADD89" //微信签名
-           },
-           function(res){
-               if(res.err_msg == "get_brand_wcpay_request:ok" ) {}     // 使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
-           }
-       );
+    var prepay_id ;
+    var sign ;
+    var appId ;
+    var timeStamp ;
+    var nonceStr ;
+    var packageStr ;
+    var signType ;
+
+    function pay(){
+
+        var url = 'pay.do';
+        $.ajax({
+        type:"post",
+        url:url,
+        dataType:"json",
+        data:{openId: openid },
+        success:function(data) {
+
+        　　if(data.result_code == 'SUCCESS'){
+                    　　appId = data.appid;
+        　　　　 sign = data.sign;
+                    　　timeStamp = data.timeStamp;
+                    　　nonceStr = data.nonce_str;
+                    　　packageStr = data.packageStr;
+                    　　signType = data.signType;
+　　　　　　　　　　　　　　//调起微信支付控件
+         　　　 callpay();
+        　　}else{
+        　　　　alert("统一下单失败");
+    　　　　　　 }
+        }
+    });
     }
-    if (typeof WeixinJSBridge == "undefined"){
-       if( document.addEventListener ){
-           document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
-       }else if (document.attachEvent){
-           document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
-           document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
-       }
-    }else{
-       onBridgeReady();
+
+    function onBridgeReady(){
+        WeixinJSBridge.invoke(
+            'getBrandWCPayRequest', {
+                 "appId":appId,     //公众号名称，由商户传入
+                 "paySign":sign,         //微信签名
+                 "timeStamp":timeStamp, //时间戳，自1970年以来的秒数
+                 "nonceStr":nonceStr , //随机串
+                 "package":packageStr,  //预支付交易会话标识
+                 "signType":signType     //微信签名方式
+             },
+             function(res){
+                 if(res.err_msg == "get_brand_wcpay_request:ok" ) {
+             //window.location.replace("index.html");
+                     alert('支付成功');
+         }else if(res.err_msg == "get_brand_wcpay_request:cancel"){
+             alert('支付取消');
+         }else if(res.err_msg == "get_brand_wcpay_request:fail" ){
+            alert('支付失败');
+         }
+                 //使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
+             }
+        );
+    }
+
+    function callpay(){
+        if (typeof WeixinJSBridge == "undefined"){
+            if( document.addEventListener ){
+                document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
+            }else if (document.attachEvent){
+                document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
+                document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
+            }
+        }else{
+            onBridgeReady();
+        }
     }
 </script>
 </body>
