--- a/src/main/resources/templates/jsapi.html
+++ b/src/main/resources/templates/jsapi.html
@@ -38,7 +38,7 @@
 
     function pay(){
 
-        var url = 'pay.do';
+        var url = 'wechatpay/pay';
         $.ajax({
         type:"post",
         url:url,
