--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -32,7 +32,7 @@
             </tr>
         </table>
 
-        <a href="toPay.do"> 支付 </a>
+        <a href="wechatpay/toPay"> 支付 </a>
     </div>
 </div>
 </body>
