--- a/src/main/resources/templates/jsapi.html
+++ b/src/main/resources/templates/jsapi.html
@@ -37,7 +37,7 @@
     var signType ;
 
     function pay(){
-        var url = 'wechatpay/pay';
+        var url = 'pay';
         $.ajax({
         type:"post",
         url:url,
