--- a/src/main/resources/templates/jsapi.html
+++ b/src/main/resources/templates/jsapi.html
@@ -72,7 +72,7 @@
             'getBrandWCPayRequest', {
                  "appId":appId,     //公众号名称，由商户传入
                  "paySign":sign,         //微信签名
-                 "timestamp":timeStamp, //时间戳，自1970年以来的秒数
+                 "timeStamp":timeStamp, //时间戳，自1970年以来的秒数
                  "nonceStr":nonceStr , //随机串
                  "package":packageStr,  //预支付交易会话标识
                  "signType":signType     //微信签名方式
