--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -33,7 +33,7 @@
             </tr>
         </table>
 
-        <a href="toPay" > <font size="12">支付</font> </a>
+        <a href="toPay" > <font size="12">确定下载合同</font> </a>
     </div>
 </div>
 </body>
