--- a/src/main/resources/templates/jsapi.html
+++ b/src/main/resources/templates/jsapi.html
@@ -8,45 +8,11 @@
 
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
-
-<style type="text/css">
-    .clear { /* generic container (i.e. div) for floating buttons */
-    overflow: hidden;
-    width: 100%;
-    }
-    a.button {
-    background: transparent url('IMG/bg_button_a.gif') no-repeat scroll top right;
-    color: #444;
-    display: block;
-    float: left;
-    font: normal 12px arial, sans-serif;
-    height: 24px;
-    margin-right: 6px;
-    padding-right: 18px; /* sliding doors padding */
-    text-decoration: none;
-    }
-    a.button span
-    {
-    background: transparent url('IMG/bg_button_span.gif') no-repeat;
-    display: block;
-    line-height: 14px;
-    padding: 5px 0 5px 18px;
-    }
-    a.button:active {
-    background-position: bottom right;
-    color: #000;
-    outline: none; /* hide dotted outline in Firefox */
-    }
-    a.button:active span {
-    background-position: bottom left;
-    padding: 6px 0 4px 18px; /* push text down 1px */
-    }
-    </style>
 </head>
 <body>
 
 <div class="container">
-    <a class="button" value="微信支付" href="pay()"/>
+    <a onclick="pay()" > <font size="12">微信支付</font> </a>
 </div>
 
 <script th:inline="javascript">
