--- a/src/main/resources/templates/jsapi.html
+++ b/src/main/resources/templates/jsapi.html
@@ -16,8 +16,11 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
-
-        <a onclick="pay()" > <font size="12">微信支付</font> </a>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <a onclick="pay()" > <font size="20">微信支付</font> </a>
 
     </div>
 </div>
