modeling the webpage using the bootstrap theme

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,154 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
 
     <title>速达律法律咨询</title>
 
-    <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
-</head>
-<body>
+    <!-- Bootstrap Core CSS -->
+    <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 
-<div class="container">
-    <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
-</div>
+    <!-- Custom CSS -->
+    <link href="../static/css/shop-homepage.css" th:href="@{/css/shop-homepage.css}" rel="stylesheet"/>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
+
+</head>
+
+<body>
+    <div th:substituteby="fragments/navbar :: navmenu"></div>
+    <div class="container">
+        <th:block th:include="fragments/header :: header"></th:block>
+    </div>
+    <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+            <div th:substituteby="fragments/category :: contract_category"></div>
+            <div class="col-md-9">
+                <div class="row">
+
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://placehold.it/320x150" th:src="@{/images/placeholder.png}" alt=""/>
+                            <div class="caption">
+                                <h4 class="pull-right">¥ 4.99</h4>
+                                <h4><a href="#">广州市职工劳动合同</a>
+                                </h4>
+                                <p>劳工合同用于解决劳工纠纷 <a target="_blank" href="http://www.bootsnipp.com">更多详情</a>.</p>
+                            </div>
+                            <div class="ratings">
+                                <p class="pull-right">15 次付费下载</p>
+                                <p>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://placehold.it/320x150" th:src="@{/images/placeholder.png}" alt=""/>
+                            <div class="caption">
+                                <h4 class="pull-right">¥ 64.99</h4>
+                                <h4><a href="#">婚姻协议书</a>
+                                </h4>
+                                <p>关于离婚的一些协议，离婚需谨慎</p>
+                            </div>
+                            <div class="ratings">
+                                <p class="pull-right">12 次付费下载</p>
+                                <p>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star-empty"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://placehold.it/320x150" th:src="@{/images/placeholder.png}" alt=""/>
+                            <div class="caption">
+                                <h4 class="pull-right">¥74.99</h4>
+                                <h4><a href="#">建筑业劳动合同范本</a>
+                                </h4>
+                                <p>建筑行业合同，仅适用于建筑施工团队。</p>
+                            </div>
+                            <div class="ratings">
+                                <p class="pull-right">31 次付费下载</p>
+                                <p>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star-empty"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://placehold.it/320x150" alt=""/>
+                            <div class="caption">
+                                <h4 class="pull-right">¥ 84.99</h4>
+                                <h4><a href="#">解除劳动合同证明书范本(一)</a>
+                                </h4>
+                                <p>本合同属于劳工合同系列，共有10份.</p>
+                            </div>
+                            <div class="ratings">
+                                <p class="pull-right">6 次付费下载</p>
+                                <p>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star-empty"></span>
+                                    <span class="glyphicon glyphicon-star-empty"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--<th:block th:include="fragments/product :: prod"></th:block>-->
+
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    <!-- /.container -->
+
+    <div class="container">
+        <hr/>
+        <div th:substituteby="fragments/footer :: copy"></div>
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="../static/js/jquery.js" th:src="@{/js/jquery.js}" ></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}" ></script>
+
 </body>
+
 </html>
